--- a/ui/lib/apps/ClusterInfo/translations/en.yaml
+++ b/ui/lib/apps/ClusterInfo/translations/en.yaml
@@ -18,7 +18,7 @@ cluster_info:
         up: Up
         down: Down
         tombstone: Tombstone
-        offline: Offline
+        offline: Leaving
         unknown: Unknown
         unreachable: Unreachable
     host_table:
