--- a/ui/lib/apps/Overview/translations/zh-CN.yaml
+++ b/ui/lib/apps/Overview/translations/zh-CN.yaml
@@ -3,7 +3,7 @@ overview:
   top_statements:
     title: Top SQL 语句
   recent_slow_query:
-    title: 最近的慢查询
+    title: 最近慢查询
   monitor_alert:
     title: 监控和告警
     view_monitor: 查看监控
