--- a/ui/lib/apps/Statement/translations/zh-CN.yaml
+++ b/ui/lib/apps/Statement/translations/zh-CN.yaml
@@ -25,7 +25,7 @@ statement:
         select_schemas: 选择数据库
         select_stmt_types: 选择 SQL 类型
         select_columns:
-          show_full_sql: 显示完整的 SQL
+          show_full_sql: 显示完整 SQL 文本
         refresh: 刷新
         time_range_selector:
           name: 选择时间段
@@ -55,17 +55,17 @@ statement:
     plan_digest: 执行计划 ID
     plan_digest_tooltip: 不同的执行计划有不同的 ID
     digest_text: SQL 模板
-    digest_text_tooltip: 相似的 SQL 语句即使查询参数不一样也具有相同的 SQL 模板
+    digest_text_tooltip: 相似的 SQL 查询即使查询参数不一样也具有相同的 SQL 模板
     sum_latency: 累计耗时
     sum_latency_tooltip: 该类 SQL 语句在时间段内的累计执行时间
     exec_count: 执行次数
     exec_count_tooltip: 该类 SQL 语句在时间段内被执行的总次数
     avg_latency: 平均耗时
-    avg_latency_tooltip: 单条 SQL 语句的执行时间
+    avg_latency_tooltip: 单条 SQL 查询的执行时间
     avg_mem: 平均内存
-    avg_mem_tooltip: 单条 SQL 语句的消耗内存大小
+    avg_mem_tooltip: 单条 SQL 查询的消耗内存大小
     max_mem: 最大内存
-    max_mem_tooltip: 最大单条 SQL 语句消耗内存大小
+    max_mem_tooltip: 最大单条 SQL 查询消耗内存大小
     table_names: 表名
     index_names: 索引名
     index_names_tooltip: SQL 执行时使用的索引名称
@@ -78,15 +78,15 @@ statement:
     errors_warnings: 错误 / 警告
     errors_warnings_tooltip: 累计错误和警告个数
     parse_latency: 解析耗时
-    parse_latency_tooltip: 解析 SQL 语句的耗时
+    parse_latency_tooltip: 解析 SQL 查询的耗时
     compile_latency: 优化耗时
-    compile_latency_tooltip: 编译并优化 SQL 语句的耗时
+    compile_latency_tooltip: 编译并优化 SQL 查询的耗时
     wait_time: Coprocessor 等待耗时
-    wait_time_tooltip: SQL 在 TiKV Coprocessor 上被等待执行的耗时，单个 SQL 所有 Coprocessor 任务累计后计算
+    wait_time_tooltip: SQL 查询在 TiKV Coprocessor 上被等待执行的耗时，单个 SQL 查询所有 Coprocessor 任务累计后计算
     process_time: Coprocessor 执行耗时
-    process_time_tooltip: SQL 在 TiKV Coprocessor 上的执行耗时，单个 SQL 所有 Coprocessor 任务累计后计算
+    process_time_tooltip: SQL 查询在 TiKV Coprocessor 上的执行耗时，单个 SQL 查询所有 Coprocessor 任务累计后计算
     backoff_time: 重试等待耗时
-    backoff_time_tooltip: 单个 SQL 所有重试累计后计算
+    backoff_time_tooltip: 单个 SQL 查询所有重试累计后计算
     get_commit_ts_time: 取 Commit Ts 耗时
     get_commit_ts_time_tooltip: 从 PD 取递交时间戳（事务号）步骤的耗时
     local_latch_wait_time: Local Latch Wait 耗时
@@ -97,16 +97,18 @@ statement:
     commit_time: Commit 阶段耗时
     commit_backoff_time: Commit 重试等待耗时
     latency: 执行耗时
+    query_time2: SQL 执行时间
+    query_time2_tooltip: 由于存在并行执行，因此 SQL 执行时间可能远小于上述各项时间
     sum_cop_task_num: 累计 Coprocessor 请求数
-    sum_cop_task_num_tooltip: 时间段内该类 SQL 累计发送的 Coprocessor 请求数
-    avg_processed_keys: 单 SQL 平均可见版本数
-    max_processed_keys: 单 SQL 最大可见版本数
-    avg_total_keys: 单 SQL 平均遇到版本数
+    sum_cop_task_num_tooltip: 时间段内该类 SQL 语句累计发送的 Coprocessor 请求数
+    avg_processed_keys: 单 SQL 查询平均可见版本数
+    max_processed_keys: 单 SQL 查询最大可见版本数
+    avg_total_keys: 单 SQL 查询平均遇到版本数
     avg_total_keys_tooltip: 含已删除或覆盖但未 GC 的版本
-    max_total_keys: 单 SQL 最大遇到版本数
+    max_total_keys: 单 SQL 查询最大遇到版本数
     avg_affected_rows: 平均影响行数
     sum_backoff_times: 累计重试次数
-    sum_backoff_times_tooltip: 这类 SQL 遇到需要重试的错误后的总重试次数
+    sum_backoff_times_tooltip: 这类 SQL 语句遇到需要重试的错误后的总重试次数
     avg_write_keys: 平均写入 Key 个数
     max_write_keys: 最大写入 Key 个数
     avg_write_size: 平均写入数据量
@@ -118,8 +120,8 @@ statement:
     digest: SQL 模板 ID
     digest_tooltip: SQL 模板的唯一标识（SQL 指纹）
     schema_name: 执行数据库
-    schema_name_tooltip: 执行该 SQL 时使用的数据库名称
-    query_sample_text: SQL 样例
-    prev_sample_text: 前一条 SQL 样例
-    prev_sample_text_tooltip: 一般来说你可能只需要看 COMMIT 语句的前一条 SQL
+    schema_name_tooltip: 执行该 SQL 查询时使用的数据库名称
+    query_sample_text: SQL 查询样例
+    prev_sample_text: 前一条 SQL 查询样例
+    prev_sample_text_tooltip: 一般来说你可能只需要看 COMMIT 语句的前一条 SQL 查询
     plan: 执行计划
