--- a/ui/lib/apps/SearchLogs/translations/en.yaml
+++ b/ui/lib/apps/SearchLogs/translations/en.yaml
@@ -44,3 +44,6 @@ search_logs:
     action: Action
     detail: Detail
     delete: Delete
+    delete_confirm_title: Delete Log Search Histories
+    delete_selected_confirm_content: Are you sure you want to delete selected log search histories?
+    delete_all_confirm_content: Are you sure you want to delete all log search histories?
