--- a/ui/lib/apps/Overview/translations/zh-CN.yaml
+++ b/ui/lib/apps/Overview/translations/zh-CN.yaml
@@ -4,6 +4,8 @@ overview:
     title: Top SQL 语句
   recent_slow_query:
     title: 最近慢查询
+  instances:
+    title: 在线实例
   monitor_alert:
     title: 监控和告警
     view_monitor: 查看监控
@@ -15,10 +17,3 @@ overview:
   metrics:
     total_requests: QPS
     latency: 延迟
-  instances:
-    title: 实例
-    component:
-      tidb: TiDB
-      tikv: TiKV
-      pd: PD
-      tiflash: TiFlash
