--- a/ui/lib/apps/SystemReport/translations/en.yaml
+++ b/ui/lib/apps/SystemReport/translations/en.yaml
@@ -1,7 +1,7 @@
-diagnose:
-  nav_title: Cluster Diagnostics
+system_report:
+  nav_title: System Report
   generate:
-    title: New Diagnostic Report
+    title: New System Report
     range_begin: Range Start Time
     range_duration: Range Duration
     is_compare: Compare by Baseline
