--- a/ui/lib/apps/Diagnose/translations/en.yaml
+++ b/ui/lib/apps/Diagnose/translations/en.yaml
@@ -1,7 +1,7 @@
 diagnose:
   nav_title: Cluster Diagnostics
   generate:
-    title: New Diagnostic Report
+    title: Cluster Diagnostics
     range_begin: Range Start Time
     range_duration: Range Duration
     is_compare: Compare by Baseline
