--- a/ui/lib/apps/Diagnose/translations/zh.yaml
+++ b/ui/lib/apps/Diagnose/translations/zh.yaml
@@ -26,3 +26,17 @@ diagnose:
     progress: 生成进度
   time_duration:
     custom: 自定义
+  table_title:
+    config_diagnosis: 配置诊断
+    error_diagnosis: 故障诊断
+    performance_diagnosis: 性能诊断
+  fields:
+    rule: Rule
+    item: Item
+    type: Type
+    instance: Instance
+    status_address: Status Address
+    value: Value
+    reference: Reference
+    severity: Severity
+    details: Details
