--- a/ui/lib/apps/Configuration/translations/zh.yaml
+++ b/ui/lib/apps/Configuration/translations/zh.yaml
@@ -1,2 +1,8 @@
-instance_config:
+configuration:
   nav_title: 实例配置
+  common:
+    kind:
+      tidb_variable: TiDB 变量
+      pd_config: PD 配置
+      tikv_config: TiKV 配置
+      tidb_config: TiDB 配置
