--- a/ui/lib/apps/Configuration/translations/en.yaml
+++ b/ui/lib/apps/Configuration/translations/en.yaml
@@ -1,2 +1,8 @@
-instance_config:
+configuration:
   nav_title: Configurations
+  common:
+    kind:
+      tidb_variable: TiDB Variables
+      pd_config: PD Configurations
+      tikv_config: TiKV Configurations
+      tidb_config: TiDB Configurations
