--- a/ui/lib/apps/ClusterInfo/translations/en.yaml
+++ b/ui/lib/apps/ClusterInfo/translations/en.yaml
@@ -26,7 +26,7 @@ cluster_info:
         disk_size: Disk Size
         disk_usage: Disk Usage
       instanceUnavailable: Host information is unknow due to instance unreachable
-    store_location:
-      title: Store Location
+    store_topology:
+      title: Store Topology
   error:
     load: 'Load component {{comp}} error: {{cause}}'
