--- a/ui/lib/apps/UserProfile/translations/en.yaml
+++ b/ui/lib/apps/UserProfile/translations/en.yaml
@@ -2,9 +2,23 @@ user_profile:
   i18n:
     title: Language & Localization
     language: Language
-  user:
-    title: User
+  session:
+    title: Session
     sign_out: Sign Out
+    share: Share Current Session
+  share_session:
+    text: >
+      You can invite others to access this TiDB Dashboard by sharing your
+      current session via an **Authorization Code**:
+
+      - The Authorization Code can be used multiple times.
+
+      - The shared session will be invalidated after the expiry time you specified.
+
+      - The shared session has the same privilege as your current session.
+    warning: >
+      Warning: Shared session will remain valid and cannot be revoked until it is expired.
+      Keep the Authorization Code safe!
   version:
     title: Version Information
     internal_version: TiDB Dashboard Internal Version
