--- a/ui/dashboardApp/layout/translations/en.yaml
+++ b/ui/dashboardApp/layout/translations/en.yaml
@@ -19,8 +19,18 @@ signin:
     button: Sign In
     tidb_auth:
       title: SQL User Sign In
-      check:
-        message: Username is required
+      switch:
+        title: SQL User
+        description: I know the username and password to connect to the database
+    code_auth:
+      title: Authorization Code Sign In
+      switch:
+        title: Authorization Code
+        description: I was invited by others with an authorization code
+      code: Code
+    use_alternative: Use Alternative Authentication
+    alternative:
+      title: Select Authentication
 nav:
   user:
     signout: Sign Out
