--- a/ui/lib/apps/UserProfile/translations/en.yaml
+++ b/ui/lib/apps/UserProfile/translations/en.yaml
@@ -6,6 +6,7 @@ user_profile:
     title: Session
     sign_out: Sign Out
     share: Share Current Session
+    share_unavailable_tooltip: Current session is a shared session and it cannot be shared again
   share_session:
     text: >
       You can invite others to access this TiDB Dashboard by sharing your
@@ -19,6 +20,14 @@ user_profile:
     warning: >
       Warning: Shared session will remain valid and cannot be revoked until it is expired.
       Keep the Authorization Code safe!
+    form:
+      expire: Expire in
+      submit: Generate Authorization Code
+    close: Close
+    success_dialog:
+      title: Authorization Code Generated
+      copy: Copy
+      copied: Copied
   version:
     title: Version Information
     internal_version: TiDB Dashboard Internal Version
