--- a/ui/dashboardApp/layout/translations/zh.yaml
+++ b/ui/dashboardApp/layout/translations/zh.yaml
@@ -8,6 +8,9 @@ error:
     tidb_conn_failed: 无法连接到 TiDB
     tidb_auth_failed: TiDB 登录验证失败
   api:
+    user:
+      signin:
+        invalid_code: 授权码无效或已过期
     other: 其他错误
 signin:
   message:
