--- a/ui/lib/apps/UserProfile/translations/zh.yaml
+++ b/ui/lib/apps/UserProfile/translations/zh.yaml
@@ -6,6 +6,26 @@ user_profile:
     title: 会话
     sign_out: 登出
     share: 分享当前会话
+    share_unavailable_tooltip: 当前会话是一个被分享的会话，因此无法再次分享
+  share_session:
+    text: >
+      您可以生成一个**授权码**来将您当前的会话分享给其他人、邀请他们使用该 TiDB Dashboard：
+
+      - 授权码可以被重复使用。
+
+      - 分享的会话将在您指定的有效时间后过期。
+
+      - 分享的会话和您当前会话具有相同权限。
+    warning: >
+      警告：已分享的会话无法被提前注销，将保持有效直到有效时间过期，因此请妥善保管授权码。
+    form:
+      expire: 有效时间
+      submit: 生成授权码
+    close: 关闭
+    success_dialog:
+      title: 授权码已生成
+      copy: 复制
+      copied: 已复制
   version:
     title: 版本信息
     internal_version: TiDB Dashboard 内部版本号
