--- a/ui/lib/apps/DataManager/translations/en.yaml
+++ b/ui/lib/apps/DataManager/translations/en.yaml
@@ -36,6 +36,7 @@ data_manager:
   delete_failed_txt: Successfully deleted
 
   action: Actions
+  name: Name
   view_db:
     name: Name
     type: Type
