--- a/ui/lib/apps/DataManager/translations/en.yaml
+++ b/ui/lib/apps/DataManager/translations/en.yaml
@@ -78,7 +78,10 @@ data_manager:
 
   head_back_all_databases: All databases
 
-  export_database: Export This Database
+  export_database_short: Export
+  export_database: Export this database as CSV file
+  dump_database_short: Dump
+  dump_database: Dump this database as SQL file
   export_tables:
     title: Export as CSV
     export_success: Export Succeeded
