--- a/ui/lib/apps/SlowQuery/translations/zh.yaml
+++ b/ui/lib/apps/SlowQuery/translations/zh.yaml
@@ -11,8 +11,8 @@ slow_query:
     timestamp_tooltip: 该 SQL 查询结束运行时的时间
     query_time: 总执行时间
     query_time_tooltip: 该 SQL 查询总的执行时间
-    memory_max: 最大内存
-    memory_max_tooltip: 该 SQL 查询执行时占用的最大内存空间
+    mem_max: 最大内存
+    mem_max_tooltip: 该 SQL 查询执行时占用的最大内存空间
     digest: SQL 模板 ID
     digest_tooltip: SQL 模板的唯一标识（SQL 指纹）
     is_internal: 是否为内部 SQL 查询
