--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -10,8 +10,8 @@ slow_query:
     timestamp_tooltip: The time this query finished execution
     query_time: Latency
     query_time_tooltip: Execution time of the query
-    memory_max: Max Memory
-    memory_max_tooltip: Maximum memory usage of the query
+    mem_max: Max Memory
+    mem_max_tooltip: Maximum memory usage of the query
     digest: Query Template ID
     digest_tooltip: a.k.a. Query digest
     is_internal: Is Internal?
