deal with cop_proc and cop_wait

--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -65,6 +65,9 @@ slow_query:
 
     prev_stmt: Previous Query
     plan: Execution Plan
+
+    cop_proc_avg: Mean Cop Proc # ?
+    cop_wait_avg: Mean Cop Wait # ?
   common:
     status:
       success: Success
