--- a/ui/lib/apps/SlowQuery/translations/zh.yaml
+++ b/ui/lib/apps/SlowQuery/translations/zh.yaml
@@ -69,6 +69,9 @@ slow_query:
 
     prev_stmt: 前一条 SQL 查询
     plan: 执行计划
+
+    cop_proc_avg: 平均处理 # ?
+    cop_wait_avg: 平均等待 # ?
   common:
     status:
       success: 成功
